06/03_Banka/Banka_Michalek_Hujo/Banka_03_študenti/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ FRI Edition\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Program Files\BlueJ FRI Edition\lib\bluejcore.jar;C:\Program Files\BlueJ FRI Edition\lib\junit-4.11.jar;C:\Program Files\BlueJ FRI Edition\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ FRI Edition\lib\lang-stride.jar;C:\Program Files\BlueJ FRI Edition\lib\javafx\lib\javafx.base.jar;C:\Program Files\BlueJ FRI Edition\lib\javafx\lib\javafx.controls.jar;C:\Program Files\BlueJ FRI Edition\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\BlueJ FRI Edition\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\BlueJ FRI Edition\lib\javafx\lib\javafx.media.jar;C:\Program Files\BlueJ FRI Edition\lib\javafx\lib\javafx.properties.jar;C:\Program Files\BlueJ FRI Edition\lib\javafx\lib\javafx.swing.jar;C:\Program Files\BlueJ FRI Edition\lib\javafx\lib\javafx.web.jar;C:\Users\Filip\Desktop\skola\Informatika\06\03_Banka\03_Banka\Banka_03_študenti
-d
C:\Users\Filip\Desktop\skola\Informatika\06\03_Banka\03_Banka\Banka_03_študenti\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\Filip\Desktop\skola\Informatika\06\03_Banka\03_Banka\Banka_03_študenti\Klient.java
<---- end of javadoc command ---->
Loading source file C:\Users\Filip\Desktop\skola\Informatika\06\03_Banka\03_Banka\Banka_03_študenti\Klient.java...
C:\Users\Filip\Desktop\skola\Informatika\06\03_Banka\03_Banka\Banka_03_študenti\Klient.java:42: error: variable declaration not allowed here
            BankovyUcet vytvorenyUcet = b.vytvorNovyUcet(this);
                        ^
1 error
